--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
             <groupId>io.micronaut</groupId>
             <artifactId>micronaut-inject-java</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.micronaut/micronaut-inject -->
+        <dependency>
+            <groupId>io.micronaut</groupId>
+            <artifactId>micronaut-inject</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.micronaut.beanvalidation</groupId>
@@ -154,6 +159,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.1</version>
         </dependency>
     </dependencies>
 
